[package]
name = "hypr-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
hyprland = "0.4.0-alpha.2"

[[bin]]
name = "hypr-tools"
path = "main.rs"
